--- a/portfolioadi.html
+++ b/portfolioadi.html
@@ -292,7 +292,7 @@ p{
 	<main>
 		<aside ="left">
 			<figure>
-				<img src="myportfolio\PicsArt_11-06-12.15.30.jpg" alt="profile picture">
+				<img src="PicsArt_11-06-12.15.30.jpg" alt="profile picture">
 				<figcaption>My Profile Picture</figcaption>
 			</figure>
 			
